--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Zomato_logo.png/220px-Zomato_logo.png"
+      href="https://play-lh.googleusercontent.com/VPqK75BwKMtTDFF6UQS6E3GYdYqzvZfddDxoKRH-DSlXIcYLN_EeSy5OXKx0bhBTtLUU"
     />
     <!-- font awesome icons -->
     <link
