--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://play-lh.googleusercontent.com/VPqK75BwKMtTDFF6UQS6E3GYdYqzvZfddDxoKRH-DSlXIcYLN_EeSy5OXKx0bhBTtLUU"
+      href="https://www.sketchappsources.com/resources/source-image/sketch-3-todo-list-app-icon-template.png"
     />
     <!-- font awesome icons -->
     <link
