--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://www.sketchappsources.com/resources/source-image/sketch-3-todo-list-app-icon-template.png"
+      href="http://www.pngimagesfree.com/LOGO/Z/Zomato/Zomato-Logo-Vector.png"
     />
     <!-- font awesome icons -->
     <link
